# mimetreeparser

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  REUSE.toml  mimetreeparser-version.h.cmake  mimetreeparserng-version.h.in
.reuse/: dep5
autotests/: CMakeLists.txt  setupenv.cpp  setupenv.h
autotests/core/: CMakeLists.txt  attachmentmodeltest.cpp  attachmenttest.cpp  cryptohelpertest.cpp  cryptohelpertest.h  fileopenertest.cpp  gpgerrortest.cpp  mimetreeparsertest.cpp  partmodeltest.cpp
autotests/gnupg_home/: gpg.conf  pubring.gpg  pubring.kbx  trustdb.gpg
autotests/testdata/: combined.mbox  forward-openpgp-signed-encrypted-no-from.mbox  internal-pgpencrypted-mime.mbox  msg.asc  multipart-mixed-alternative-inline-pgp.mbox  openpgp-encrypted-ambiguous-mime.mbox  openpgp-inline-encrypted+nonenc.mbox  openpgp-inline-signed-broken2.mbox  openpgp-inline-signed.mbox  openpgp-signed-and-unsigned-attachments-and-parts.mbox  openpgp-signed-sender-mismatch.mbox  smime-encrypted-ambiguous-mime.mbox  smime-encrypted-not-so-ambiguous-mime.mbox  smime-signed-charset.mbox
autotests/widgets/: CMakeLists.txt  messageviewerdialogtest.cpp  messageviewertest.cpp
cmake/modules/: add_gpg_crypto_test.cmake  kdepim_add_gpg_crypto_test.cmake
examples/: CMakeLists.txt
examples/qml/: CMakeLists.txt  fileopener.cpp  fileopener.h  main.cpp  messagehandler.h  resources.qrc
examples/qml/content/: HtmlPart.qml  ICalPart.qml  MailPartModel.qml  MailViewer.qml  TextPart.qml  main.qml
examples/widgets/: CMakeLists.txt  main.cpp
po/ar/: mimetreeparser6.po
po/ast/: mimetreeparser.po  mimetreeparser6.po
po/ca/: mimetreeparser.po  mimetreeparser6.po
po/ca@valencia/: mimetreeparser.po  mimetreeparser6.po
po/cs/: mimetreeparser.po  mimetreeparser6.po
po/de/: mimetreeparser.po  mimetreeparser6.po
po/en_GB/: mimetreeparser6.po
po/eo/: mimetreeparser.po  mimetreeparser6.po
po/es/: mimetreeparser.po  mimetreeparser6.po
po/eu/: mimetreeparser.po  mimetreeparser6.po
po/fi/: mimetreeparser.po  mimetreeparser6.po
po/fr/: mimetreeparser.po  mimetreeparser6.po
po/ga/: mimetreeparser6.po
po/gl/: mimetreeparser6.po
po/he/: mimetreeparser6.po
po/hi/: mimetreeparser6.po
po/hu/: mimetreeparser6.po
po/ia/: mimetreeparser.po  mimetreeparser6.po
po/it/: mimetreeparser.po  mimetreeparser6.po
po/ja/: mimetreeparser.po  mimetreeparser6.po
po/ka/: mimetreeparser.po  mimetreeparser6.po
po/ko/: mimetreeparser.po  mimetreeparser6.po
po/lt/: mimetreeparser6.po
po/lv/: mimetreeparser6.po
po/nl/: mimetreeparser.po  mimetreeparser6.po
po/pl/: mimetreeparser.po  mimetreeparser6.po
po/pt_BR/: mimetreeparser6.po
po/ru/: mimetreeparser.po  mimetreeparser6.po
po/sa/: mimetreeparser6.po
po/sk/: mimetreeparser.po  mimetreeparser6.po
po/sl/: mimetreeparser.po  mimetreeparser6.po
po/sv/: mimetreeparser.po  mimetreeparser6.po
po/tr/: mimetreeparser.po  mimetreeparser6.po
po/ug/: mimetreeparser6.po
po/uk/: mimetreeparser.po  mimetreeparser6.po
po/zh_CN/: mimetreeparser.po  mimetreeparser6.po
po/zh_TW/: mimetreeparser.po  mimetreeparser6.po
src/: CMakeLists.txt  Messages.sh  attachmentmodel.cpp  mailcrypto.h  mailtemplates.cpp  messageparser.cpp  messageparser.h  messagepart.cpp  partmodel.cpp
src/core/: CMakeLists.txt  KPimMimeTreeParserCoreConfig.cmake.in  attachmentmodel.cpp  attachmentmodel.h  bodypartformatter.cpp  bodypartformatter.h  bodypartformatter_impl.cpp  bodypartformatterbasefactory.cpp  bodypartformatterbasefactory.h  bodypartformatterbasefactory_p.h  crypto.cpp  crypto.h  cryptohelper.cpp  cryptohelper.h  enums.h  fileopener.cpp  fileopener.h  htmlutils.cpp  htmlutils.h  mailtemplates.cpp  mailtemplates.h  messageparser.cpp  messageparser.h  messagepart.cpp  messagepart.h  mimetreeparser-core.qdoc  mimetreeparser-core.qdocconf  mimetreeparser-index.qdoc  objecttreeparser.cpp  objecttreeparser.h  partmetadata.h  partmodel.cpp  partmodel.h  urlhandler.cpp  urlhandler.h  utils.cpp  utils.h
src/core/autotests/: CMakeLists.txt  attachmentmodeltest.cpp  cryptohelpertest.cpp  cryptohelpertest.h  fileopenertest.cpp  gpgerrortest.cpp  mailtemplatetest.cpp  mimetreeparsertest.cpp  partmodeltest.cpp
src/core/itinerary/: itinerarymemento.cpp  itinerarymemento.h  itineraryprocessor.cpp  itineraryprocessor.h
src/core/job/: qgpgmejobexecutor.cpp
src/core/testdata/: smime.p7m
src/plugins/: CMakeLists.txt  mimetreeparserplugin.cpp  mimetreeparserplugin.h
src/plugins/qml/: MailViewer.qml
src/plugins/qml/private/: MailPart.qml  MailPartView.qml
src/quick/: CMakeLists.txt  itinerarykdeconnecthandler.cpp  itinerarykdeconnecthandler.h  itinerarymodel.cpp  itinerarymodel.h  mimetreeparserplugin.cpp  mimetreeparserplugin.h  types.h  wheelinterceptor.cpp  wheelinterceptor.h
src/quick/qml/: MailViewer.qml
src/quick/qml/itinerary/: FlightReservationComponent.qml  FoodReservationComponent.qml  ItineraryComponent.qml  ItineraryReservationComponent.qml  JourneySectionStopDelegateLineSegment.qml  TrainReservationComponent.qml  TripMenu.qml
src/quick/qml/private/: AttachmentDelegate.qml  Banner.qml  ErrorPart.qml  HtmlPart.qml  ICalPart.qml  MailPart.qml  MailPartModel.qml  MailPartView.qml  TextPart.qml
src/widgets/: CMakeLists.txt  KPimMimeTreeParserWidgetsConfig.cmake.in  attachmentview.cpp  attachmentview_p.h  cryptoutils.cpp  cryptoutils.h  messagecontainerwidget.cpp  messagecontainerwidget_p.h  messageviewer.cpp  messageviewer.h  messageviewerbase_p.cpp  messageviewerbase_p.h  messageviewerdialog.cpp  messageviewerdialog.h  messageviewerutils_p.cpp  messageviewerutils_p.h  messageviewerwindow.cpp  messageviewerwindow.h  mimetreeparser-widgets.qdoc  mimetreeparser-widgets.qdocconf  urlhandler.cpp  urlhandler_p.h
src/widgets/autotests/: CMakeLists.txt  messageviewertest.cpp
